# iot-attack-surface-scanner

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
data/: oui_database.csv
iotscanner/: __init__.py  cli.py  shell.py
iotscanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
iotscanner/db/: models.py  session.py
iotscanner/scanner/: discovery.py  fingerprint.py
iotscanner/utils/: console.py
tests/: test_discovery.py  test_fingerprint.py
