[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iotscanner"
version = "0.1.0"
description = "IoT Attack Surface Scanner — discover and fingerprint devices on your network"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "scapy>=2.5",
    "zeroconf>=0.131",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "lxml>=5.0",
]

[project.scripts]
iotscanner = "iotscanner.cli:app"

[tool.setuptools.packages.find]
include = ["iotscanner*"]
