[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iotscanner"
version = "0.1.0"
description = "IoT Attack Surface Scanner — discover and fingerprint devices on your network"
requires-python = ">=3.11"
dependencies = [
    "rich==13.7.1",
    "scapy==2.7.0",
    "zeroconf==0.148.0",
    "httpx==0.28.1",
    "sqlalchemy==2.0.48",
    "python-dotenv==1.2.2",
    "lxml==6.0.2",
    "mac-vendor-lookup>=0.1.15",
]

[project.scripts]
iotscanner = "iotscanner.cli:main"

[tool.setuptools.packages.find]
include = ["iotscanner*"]
